// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityRow handles high member count and moderator role 1`] = `
<View>
  <StarIcon />
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Greater Place
    </Text>
  </TouchableOpacity>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    24.5k
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`CommunityRow matches the last snapshot 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Great Place
    </Text>
  </TouchableOpacity>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    432
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`MemberBio matches the last snapshot 1`] = `
<View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      About Me
    </Text>
  </View>
  <Control
    editable={undefined}
    hideEditIcon={true}
    multiline={true}
    onBlur={undefined}
    onChangeText={[Function]}
    value="I live I die!"
  />
</View>
`;

exports[`MemberCommunities matches the last snapshot 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    My Hylo Communities
  </Text>
  <CommunityRow
    goToCommunity={undefined}
    membership={
      Object {
        "id": 1,
      }
    }
  />
  <CommunityRow
    goToCommunity={undefined}
    membership={
      Object {
        "id": 2,
      }
    }
  />
  <CommunityRow
    goToCommunity={undefined}
    membership={
      Object {
        "id": 3,
      }
    }
  />
</View>
`;

exports[`MemberDetails matches the last snapshot 1`] = `
<ScrollViewMock
  contentContainerStyle={
    Object {
      "backgroundColor": "white",
      "paddingHorizontal": 16,
      "paddingTop": 12,
    }
  }
>
  <MemberHeader
    editProfile={[Function]}
    editable={undefined}
    isMe={undefined}
    person={
      Object {
        "id": 1,
      }
    }
    saveChanges={[Function]}
    updateSetting={[Function]}
  />
  <MemberBio
    editable={undefined}
    person={
      Object {
        "id": 1,
      }
    }
    saveChanges={[Function]}
    updateSetting={[Function]}
  />
  <MemberSkills
    editable={undefined}
    goToSkills={undefined}
    skills={
      Array [
        "One",
      ]
    }
  />
  <MemberCommunities
    goToCommunity={[Function]}
    person={
      Object {
        "id": 1,
      }
    }
  />
</ScrollViewMock>
`;

exports[`MemberDetails returns Loading when there's no person 1`] = `<Loading />`;

exports[`MemberSkills matches the last snapshot 1`] = `
<View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      My Skills
    </Text>
  </View>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={true}
    focusedOpacity={0.7}
    onPress={undefined}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        RUN
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        ALL
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        DAY
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
